# cppsdk

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  BUILD  CHANGELOG.md  CPPLINT.cfg  MODULE.bazel  README.md  WORKSPACE  bootstra.sh  test.cpp
examples/: BUILD  main.cpp
examples/include/glog_example/: test_glog.h
examples/src/: test_glog.cpp
sdk/: BUILD
sdk/benchmark/: BUILD
sdk/benchmark/ringbuffer/: BENCHMARK.md  BUILD  spsc_ringbuffer_benchmark.cc  spsc_ringbuffer_benchmark.cpp
sdk/benchmark/segment_tree/: BENCHMARK.md  BUILD  segment_tree_benchmark.cc  segment_tree_benchmark.cpp
sdk/container/: BUILD
sdk/container/include/: segment_tree.h  spsc_ringbuffer.hpp
sdk/container/src/: segment_tree.cc  segment_tree.cpp
sdk/container/tests/: BUILD  ringbuffer_test.cc  ringbuffer_test.cpp  segment_tree_test.cc  segment_tree_test.cpp
sdk/include/algorithm_v1/: segment_tree.h  tree.h  trie.h
sdk/include/base/: macros.h  shared_ptr.h
sdk/include/container_v1/: spsc_ringbuffer.h
sdk/log/: BUILD
sdk/log/include/: log.h
sdk/log/src/: log.cc
sdk/macro/: BUILD
sdk/network/: BUILD
sdk/network/include/: frame_codec_base.h  frame_codec_simple.h  tcp_client.h  tcp_client_impl.h  tcp_server.h  tcp_server_impl.h
sdk/network/src/: tcp_client.cc  tcp_client_impl.cc  tcp_server.cc  tcp_server_impl.cc
sdk/network/tests/: BUILD  tcp_client_server_test.cc  tcp_server_test_wrapper.h
sdk/src/: segment_tree.cpp  tree.cpp  trie.cpp
sdk/tests/: BUILD  ringbuffer_test.cpp  segment_tree_test.cpp  test_segment_tree.cpp  trie_test.cpp
sdk/time/: BUILD
sdk/time/include/: time.h
sdk/time/src/: time.cc
